update translatable strings

--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 id="send_message_label" class="modal-title">{{ _('Send Message') }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" aria-label="{{ _('Close') }}">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
