--- a/apollo/templates/admin/base.html
+++ b/apollo/templates/admin/base.html
@@ -72,7 +72,7 @@
     <footer class="footer mt-auto py-1 fixed-bottom bg-white">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between mt-0 pt-3">
-                <p class="small text-muted" data-config-id="copyright">Apollo v{{ config.VERSION }} &mdash; Built with <span class="text-danger">&hearts;</span> from Lagos</p>
+                <p class="small text-muted" data-config-id="copyright">Apollo v{{ config.VERSION }} &mdash; {% trans %}Built with <span class="text-danger">♥</span> from Lagos{% endtrans %}</p>
                 {% block footer -%}{%- endblock %}
             </div>
         </div>
