--- a/apollo/templates/admin/location_headers_errors.html
+++ b/apollo/templates/admin/location_headers_errors.html
@@ -6,7 +6,7 @@
     <li>{{ error_msg }}</li>
 {% endfor -%}
 </ul>
-<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+<button type="button" class="close" data-dismiss="alert" aria-label="{{ _('Close') }}">
     <span aria-hidden="true">&times;</span>
 </button>
 {%- endif %}
