--- a/apollo/templates/admin/locations_list_filter.html
+++ b/apollo/templates/admin/locations_list_filter.html
@@ -4,7 +4,7 @@
     <form class="mb-n2 ml-n2 mr-n2">
       <div class="form-row">
         <div class="col-6 col-md-4 mb-2">
-          {{ form.name(class_='form-control', placeholder='Name') }}
+          {{ form.name(class_='form-control', placeholder='{{ _('Name') }}') }}
         </div>
         <div class="col-6 col-md-2 mb-2">
           {{ form.location_type(class_='form-control custom-select') }}
