--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -92,8 +92,8 @@
                                 <a class="dropdown-item" href="{{ url_for('deployment.index_view') }}">{{ _('Admin') }}</a>
                                 <div class="dropdown-divider"></div>
                                 {%- endif %}
-                                <a class="dropdown-item" href="{{ url_for('users.user_profile') }}">{{ _('Account Settings') }}</a>
-                                <div class="dropdown-divider"></div>
+                                {%- if not current_user.has_role('field-coordinator') %}<a class="dropdown-item" href="{{ url_for('users.user_profile') }}">{{ _('Account Settings') }}</a>
+                                <div class="dropdown-divider"></div>{%- endif %}
                                 <a class="dropdown-item" href="{{ url_for_security('logout') }}">{{ _('Logout') }}</a>
                             </div>
                         </li>
